bug fixes + improved code readability

--- a/src/components/Table/Table.module.css
+++ b/src/components/Table/Table.module.css
@@ -69,6 +69,13 @@ table tr td {
   justify-content: center;
   display: flex;
   flex-direction: column;
-  padding-left: 20%;
+  padding-left: 10%;
   width: 80%;
+}
+
+.graphControls {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-left: 10%;
 }
